
- Note that Darwin Alexander Pucha Cofrep has been added as a developer to work on plotRings() etc.

File: DESCRIPTION
----------------

- Fixing the version requirement for "animation" (>= 2.0-2)
- Fixing the version requirement for "R.utils" (>= 1.32.1)
- Introducing version requirement (>= 3.6) for suggested package "forecast"

File: plotRings.R
----------------

- Notes an issue in the length.unit arg to the function given differently in the Rd file vs the R file. Made a quick fix. Also made a small adjustment to the axis limits as it seemed there was a lot of extra white space in the plot. Removed bty for the legend. Not sure if I understand the full rationale behind the way the function is written though. -AGB

File: csv2rwl.R
----------------
Adding new function to read csv files in as rwl objects. Also adding that capability into read.rwl. Mikko should see if the error checks etc pass muster.

File: read.rwl.R
----------------
Adding read2csv into read.rwl both as a format specification and as an auto detect. Mikko should see if the error checks etc pass muster.

File: time.rwl.R
----------------

- Two convenience functions time.rwl and time.crn which extract the row.names of
  rwl and crn objects as numerics. Used as a S3 method with class rwl and class crn.
  This resulted in various changes to Rd files to make use of this capability.

File: seg.plot.R
----------------

- Fixed an issue with ylim and yaxs which should cut out extra white space.

File: xdate-dplR.Rnw
----------------

- Fixed typos 

* CHANGES IN dplR VERSION 1.6.7

File: latexify.R
----------------

- Fixed a bug in latexDate() which was causing failure on R-Devel.

File: plotRings.R
----------------

- New function to plot a cross section. Contributed by Darwin Pucha-Cofrep and Jakob Wernicke

File: DESCRIPTION
----------------

- Added in new authors (Darwin Pucha-Cofrep and Jakob Wernicke) 
- Added animation to Imports list
- Added gmp to Suggests

File: NAMESPACE
----------------
